
                 CHANGELOG
---------------------------------------

Current Devel
	- API: Added event_ms_sent to allow hooks when a user sends a memo
	- Modules/Config: Added use_fantasy, allowing you to not allow the use of fantasy, which could potentially save resources
	- Modules: If use_fantasy is set to false, set +d (deaf) on services, if it's available

1.0.0-alpha3
	- API: Added idflush() for flushing data about identified users to disk.
	- Chakora: Use idflush() if a SIGINT is caught while in debug mode.
	- Modules: Added nickserv/ghost.
	- Contrib - russellb28: Added chanserv/speak which allows the use of 'say' and 'act'
	- Contrib - russellb28: Added operserv/dns which allows operators to lookup A/MX/NS DNS Records
	- Contrib - russellb28: Added operserv/kill which be used as an alternate to the ircd's built in /kill
	- Modules: added chanserv/mode
	- Protocol - Charybdis: Added handling for MLOCK
	- API: added serv_global when a particular service need to send a global, send_global should be used for network announcements
	- Modules: added chanserv/kick
	- Modules: added chanserv/ban
	- Modules: added chanserv/kickban
	- Protocols: Basic InspIRCd2.0 Protocol Added
	- Protocols: PROTO_SETTINGS{god} added to all IRCd's, it should be used by any module that creates a service (if available) as such.
	- Protocols: Re-create OperServ if killed.
	- Chakora: Added $Chakora::LINKD which is the SID of the server we are linked to.
	- Protocol - InspIRCd(12|20): Added tracking for module load/unloads.
	- Chakora: Deleted $Chakora::LINKD as sidInfo provides this data.
	- Modules: Added operserv/modreload for reloading modules.
	- Protocols: If a server splits, delete all servers that it acts hub to, along with their users.
	- API: Added event_chgident() and event_chghost()
	- operserv/modunload: Unload all modules of that service if the main module is unloaded.
	- API: Added fantasy() for enabling fantasy on a ChanServ command.