@@ -11,6 +11,7 @@ Current Devel
 	- API: Added event_ms_sent to allow hooks when a user sends a memo
 	- Modules/Config: Added use_fantasy, allowing you to not allow the use of fantasy, which could potentially save resources
 	- Modules: If use_fantasy is set to false, set +d (deaf) on services, if it's available
+	- Protocols: InspIRCd: If m_deaf is loaded/unloaded... un(set) the mode on services
 
 1.0.0-alpha3
 	- API: Added idflush() for flushing data about identified users to disk.
